--- a/dachshundtablayout/src/main/res/values/strings.xml
+++ b/dachshundtablayout/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Dachshund Tab Layout</string>
+    <string name="app_name">Dachshund Tab Layout213123123</string>
 </resources>
